# INPG_demo

./: .gitignore  .infrahub.yml  README.md
.devcontainer/: devcontainer.json
bootstrap/: create_location.py  create_topology.py
nuts/: clab_topology.j2  docker-compose.yml  nuts_bgp_test.gql  nuts_vrf_test.gql  pyproject.toml
scripts/: get_configs.py
templates/: device_arista_config.tpl.j2  device_info.gql
topology/: clab_topology.j2
