[tool.poetry]
name = "runtime-nuts"
version = "0.1.0"
description = ""
authors = ["Marco Martinez <mmmartinez@bluewin.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <3.13"
nuts = "^3.3.0"
nornir-napalm = "^0.5.0"
nornir-infrahub = "^1.1.0"
nornir-netmiko = "^1.0.1"
setuptools = "^70.0.0"
pytest = "*"
nornir-utils = "^0.2.0"
allure-pytest = "^2.13.5"
pytest-prometheus-pushgateway = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"